--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -7,14 +7,14 @@
 # Sári Gábor <sari.gabor@gmail.com>, 2017
 # Gyuris Gellért <bubu@ujevangelizacio.hu>, 2018
 # Gyuris Gellért <bubu@ujevangelizacio.hu>, 2017
-# Grawens <szabolcs.szanyi@gmail.com>, 2014-2017
+# Grawens <szabolcs.szanyi@gmail.com>, 2014-2018
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-21 22:13+0000\n"
-"Last-Translator: Gyuris Gellért <bubu@ujevangelizacio.hu>\n"
+"PO-Revision-Date: 2018-04-20 16:22+0000\n"
+"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -289,7 +289,7 @@ msgid "Administrator: read/write, Users: read/write, Others: read-only"
 msgstr "Adminisztrátor: olvasás/írás, Felhasználók: olvasás/írás, Mások: csak olvasás"
 
 msgid "Advanced Power Management"
-msgstr "Fejlett energiagazdálkodás"
+msgstr "Fejlett energiagazd."
 
 msgid "Advanced settings"
 msgstr "Haladó beállítások"
@@ -440,7 +440,7 @@ msgid "Auto logout"
 msgstr "Automatikus kilépés"
 
 msgid "Auto logout after the specified idle period."
-msgstr "Automatikus kilépés megadott idő után"
+msgstr "Automatikus kilépés ennyi idő után"
 
 msgid "Automatic Acoustic Management"
 msgstr "Automatikus zajszint kezelés"
@@ -3852,7 +3852,7 @@ msgid "User information"
 msgstr "Felhasználói információ"
 
 msgid "User/Group permissions"
-msgstr "Felhasználó/Csoport jogosultságok"
+msgstr "Felhasználó és Csoport jogosultságok"
 
 msgid "Username"
 msgstr "Felhasználónév"
