Issue #88: Refactor RPC FileSystemMgmt::enumerateFilesystems() to speedup filesystem detection.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -5,6 +5,8 @@ openmediavault (4.1.5-1) stable; urgency=low
   * Issue #84: Perf. statistics/Disk usage tab: double label if the system
     disk has already a label
   * Issue #87: Use device file when resizing XFS/JFS filesystems.
+  * Issue #88: Refactor RPC FileSystemMgmt::enumerateFilesystems() to speedup
+    filesystem detection.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 10 Apr 2018 20:30:26 +0200
 
