--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.1.6) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 30 Apr 2018 17:03:51 +0200
+
 openmediavault (4.1.5-1) stable; urgency=low
 
   * Update locales.
