--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-04-20 16:22+0000\n"
+"PO-Revision-Date: 2018-05-07 05:19+0000\n"
 "Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
@@ -428,7 +428,7 @@ msgid "Authentication"
 msgstr "Hitelesítés"
 
 msgid "Authentication method"
-msgstr "Hitelesítési eljárás"
+msgstr "Hitelesítési módszer"
 
 msgid "Authentication required"
 msgstr "Hitelesítés szükséges"
