--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (5.0) unstable; urgency=low
 
   * Update locales.
+  * Fix bug in Postfix when using port 465 (SSL/TLS).
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2018 22:06:11 +0200
 
