--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.100) stable; urgency=low
+
+  * 
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 14 May 2018 07:30:56 +0200
+
 openmediavault (3.0.99) stable; urgency=low
 
   * Set correct timeout in OMV.data.proxy.Rpc.
