Update changelog for issue #110.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-nut (4.0.13-1) stable; urgency=low
+
+  * Issue #110: No UPS voltage graphs.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 23 May 2018 11:54:01 +0200
+
 openmediavault-nut (4.0.12-1) stable; urgency=low
 
   * Fix postrm script.
