--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-lvm2 (4.0.6-1) stable; urgency=low
+
+  * Fix the pattern attribute in the JSON schemas according to the ECMA 262
+    regular expression dialect.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 26 May 2018 10:56:19 +0200
+
 openmediavault-lvm2 (4.0.5-1) stable; urgency=low
 
   * Update locales.
