Fix the pattern attribute in the JSON schemas according to the ECMA 262 regular expression dialect.
Signed-off-by: Volker Theile <votdev@gmx.de>
(cherry picked from commit 8b36a47eb33b673bbf10b5da348c435a5a912c99)

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,8 @@ openmediavault (4.1.7) stable; urgency=low
 
   * Update locales.
   * Fix bug in Postfix when using port 465 (SSL/TLS).
+  * Fix the pattern attribute in the JSON schemas according to the ECMA 262
+    regular expression dialect.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 09 May 2018 09:31:03 +0200
 
