--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault-clamav (4.1.7-1) stable; urgency=low
 
+  * Update locales.
   * Fix the pattern attribute in the JSON schemas according to the ECMA 262
     regular expression dialect.
 
