--- a/deb/openmediavault-diskstats/usr/share/openmediavault/locale/uk_UK/openmediavault-diskstats.po
+++ b/deb/openmediavault-diskstats/usr/share/openmediavault/locale/uk_UK/openmediavault-diskstats.po
@@ -10,21 +10,22 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-31 13:59+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: zubr139, 2018\n"
 "Language-Team: Ukrainian (https://www.transifex.com/votdev/teams/14254/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: uk\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=4; plural=(n % 1 == 0 && n % 10 == 1 && n % 100 != 11 ? 0 : n % 1 == 0 && n % 10 >= 2 && n % 10 <= 4 && (n % 100 < 12 || n % 100 > 14) ? 1 : n % 1 == 0 && (n % 10 ==0 || (n % 10 >=5 && n % 10 <=9) || (n % 100 >=11 && n % 100 <=14 )) ? 2: 3);\n"
 
 msgid "Disk I/O"
-msgstr ""
+msgstr "Диск I/O"
 
 msgid "Operations"
-msgstr ""
+msgstr "Операції"
 
 msgid "Time per operation"
-msgstr ""
+msgstr "Час на операцію"
 
 msgid "Traffic"
-msgstr ""
+msgstr "Трафік"
