--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-21 13:44+0000\n"
+"PO-Revision-Date: 2018-05-16 06:05+0000\n"
 "Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
@@ -3236,7 +3236,7 @@ msgid "TCP forwarding"
 msgstr "TCP 转发"
 
 msgid "Taiwan"
-msgstr "台湾"
+msgstr "中国台湾"
 
 msgid "Tajikistan"
 msgstr "塔吉克斯坦斯坦"
