--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault-nut (4.0.13-1) stable; urgency=low
 
+  * Update locales.
   * Issue #110: No UPS voltage graphs.
   * Fix the pattern attribute in the JSON schemas according to the ECMA 262
     regular expression dialect.
