--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -8,14 +8,14 @@
 # maurorulli <mauro.rulli@gmail.com>, 2012
 # maurorulli <mauro.rulli@gmail.com>, 2012
 # Mario Varelli <mvarelli@biologia.unipi.it>, 2012
-# Paolo Velati <paolo.velati@gmail.com>, 2013-2017
+# Paolo Velati <paolo.velati@gmail.com>, 2013-2018
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-21 10:50+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-05-23 14:55+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2400,7 +2400,7 @@ msgstr "Si prega di verificare la <a href='http://www.samba.org/samba/docs/man/m
 msgid ""
 "Please check the <a href='https://man.openbsd.org/sshd_config.5' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Si prega di verificare la <a href='https://man.openbsd.org/sshd_config.5' target='_blank'>pagina del manuale </a>per maggiori dettagli."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Per favore scegli il metodo per il ripristino del dispositivo o 'Annulla' per annullare."
@@ -3502,14 +3502,14 @@ msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "Questo campo dovrebbe contenere solamente numeri separati da <,> o <;>"
 
 msgid "This field should only contain options separated by <,>"
-msgstr ""
+msgstr "Questo campo dovrebbe contenere solamente opzioni separate da <,>"
 
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "Questo campo dovrebbe contenere solamente porte (0 - 65535) separate da <,> o <;>"
 
 msgid "This field should only contain strings separated by <,>"
-msgstr ""
+msgstr "Questo campo dovrebbe contenere solamente stringhe separate da <,>"
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "Questo campo dovrebbe contenere solamente stringhe separate da <,> o <;>"
