--- a/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
@@ -4,21 +4,21 @@
 # 
 # Translators:
 # Андрей Чапалда <ansilent@gmail.com>, 2012
-# zubr139, 2013-2017
+# zubr139, 2013-2018
 # Андрей Чапалда <ansilent@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-01-21 11:50+0100\n"
-"PO-Revision-Date: 2018-01-21 10:50+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2018-05-24 19:51+0000\n"
+"Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: uk\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=4; plural=(n % 1 == 0 && n % 10 == 1 && n % 100 != 11 ? 0 : n % 1 == 0 && n % 10 >= 2 && n % 10 <= 4 && (n % 100 < 12 || n % 100 > 14) ? 1 : n % 1 == 0 && (n % 10 ==0 || (n % 10 >=5 && n % 10 <=9) || (n % 100 >=11 && n % 100 <=14 )) ? 2: 3);\n"
 
 #, javascript-format
 msgid "% completed ..."
@@ -2397,7 +2397,7 @@ msgstr "Відвідайте <a href='http://www.samba.org/samba/docs/man/manpag
 msgid ""
 "Please check the <a href='https://man.openbsd.org/sshd_config.5' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Відвідайте <a href='https://man.openbsd.org/sshd_config.5' target='_blank'>сторінку керівництва</a> для більш докладної інформації."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Будь ласка, оберіть стерити пристрій, або \"Скасувати\", щоб перервати операцію."
@@ -3499,14 +3499,14 @@ msgid "This field should only contain numbers separated by <,> or <;>"
 msgstr "Це поле повинно містити тільки числа, розділені <,> або <;>"
 
 msgid "This field should only contain options separated by <,>"
-msgstr ""
+msgstr "Це поле має містити лише параметри, розділені символом <,>"
 
 msgid ""
 "This field should only contain ports (0 - 65535) separated by <,> or <;>"
 msgstr "Це поле повинно містити тільки порти (0 - 65535), відокремлені <,> або <;>"
 
 msgid "This field should only contain strings separated by <,>"
-msgstr ""
+msgstr "Це поле повинно містити тільки рядки, розділені <,>"
 
 msgid "This field should only contain strings separated by <,> or <;>"
 msgstr "Це поле повинно містити тільки рядки, розділені <,> або <;>"
