--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,4 +1,10 @@
-openmediavault (4.1.7) stable; urgency=low
+openmediavault (4.1.8-1) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 26 May 2018 17:02:31 +0200
+
+openmediavault (4.1.7-1) stable; urgency=low
 
   * Update locales.
   * Fix bug in Postfix when using port 465 (SSL/TLS).
@@ -7,7 +13,7 @@ openmediavault (4.1.7) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 09 May 2018 09:31:03 +0200
 
-openmediavault (4.1.6) stable; urgency=low
+openmediavault (4.1.6-1) stable; urgency=low
 
   * Update locales.
   * Various improvements.
